; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_bloom.c_bloom_filter_check.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_bloom.c_bloom_filter_check.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [13 x i8] c"bloom.filter\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @bloom_filter_check to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bloom_filter_check(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %7 = load i32*, i32** %2, align 8
  %8 = call i64 @luaL_checkudata(i32* %7, i32 1, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0))
  %9 = inttoptr i64 %8 to i32*
  store i32* %9, i32** %3, align 8
  %10 = load i32*, i32** %2, align 8
  %11 = call i64 @luaL_checklstring(i32* %10, i32 2, i64* %4)
  %12 = inttoptr i64 %11 to i32*
  store i32* %12, i32** %5, align 8
  %13 = load i32*, i32** %5, align 8
  %14 = load i64, i64* %4, align 8
  %15 = load i32*, i32** %3, align 8
  %16 = call i32 @add_or_check(i32* %13, i64 %14, i32* %15, i32 0)
  store i32 %16, i32* %6, align 4
  %17 = load i32*, i32** %2, align 8
  %18 = load i32, i32* %6, align 4
  %19 = call i32 @lua_pushboolean(i32* %17, i32 %18)
  ret i32 1
}

declare dso_local i64 @luaL_checkudata(i32*, i32, i8*) #1

declare dso_local i64 @luaL_checklstring(i32*, i32, i64*) #1

declare dso_local i32 @add_or_check(i32*, i64, i32*, i32) #1

declare dso_local i32 @lua_pushboolean(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
